Fix gitignore, change structure and fix bugs in code

--- a/ccode/CMakeLists.txt
+++ b/ccode/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT("simrank_lowrank")
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
-#SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
-LIST(APPEND CMAKE_CXX_FLAGS " -std=c++11 -Wall -O3")
+SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
+LIST(APPEND CMAKE_CXX_FLAGS " -std=c++11 -Wall -O3 -g") 
 INCLUDE_DIRECTORIES(./src/)
 ADD_EXECUTABLE(simrank_lowrank
 main.cpp
@@ -9,4 +9,4 @@ main.cpp
 ./src/SimRankLowrank.cpp
 )
 
-TARGET_LINK_LIBRARIES(simrank_lowrank -larmadillo)
+TARGET_LINK_LIBRARIES(simrank_lowrank -larmadillo -lhdf5)
