--- a/ccode/CMakeLists.txt
+++ b/ccode/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT("simrank_lowrank")
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
-LIST(APPEND CMAKE_CXX_FLAGS " -std=c++11 -Wall -O3 -g") 
+LIST(APPEND CMAKE_CXX_FLAGS " -std=c++11 -Wall -O3") 
 INCLUDE_DIRECTORIES(./src/)
 ADD_EXECUTABLE(simrank_lowrank
 main.cpp
